convert legacy html

--- a/ui/static/arch/editor2007itog1.htm
+++ b/ui/static/arch/editor2007itog1.htm
@@ -1,68 +1,72 @@
-<html><body><pre>
-В голосовании приняли участие 35 редакторов (из 62, имевших такое право).
+<html>
+  <body>
+    <pre>
+п▓ пЁп╬п╩п╬я│п╬п╡п╟п╫п╦п╦ п©я─п╦п╫я▐п╩п╦ я┐я┤п╟я│я┌п╦п╣ 35 я─п╣п╢п╟п╨я┌п╬я─п╬п╡ (п╦п╥ 62, п╦п╪п╣п╡я┬п╦я┘ я┌п╟п╨п╬п╣ п©я─п╟п╡п╬).
 
-Сначала об итогах голосования по второму пункту.
-За   вариант   "А"  (организаторами  конкурса  являются  две  комиссии
-Правления  МАК)  высказались  11  участников,  за вариант "Б" (конкурс
-проводится  создаваемой с нуля коллегией редакторов) - 17, остальные 7
-участников  воздержались  от  выбора  либо  проголосовали против обоих
-вариантов.  В  связи с этим координаторами конкурса предлагается такое
-решение:  сейчас  конкурс считается проведенным совместно и комиссиями
-Правления МАК, и сообществом редакторов (экспертной группой конкурса).
+п║п╫п╟я┤п╟п╩п╟ п╬п╠ п╦я┌п╬пЁп╟я┘ пЁп╬п╩п╬я│п╬п╡п╟п╫п╦я▐ п©п╬ п╡я┌п╬я─п╬п╪я┐ п©я┐п╫п╨я┌я┐.
+п≈п╟   п╡п╟я─п╦п╟п╫я┌   "п░"  (п╬я─пЁп╟п╫п╦п╥п╟я┌п╬я─п╟п╪п╦  п╨п╬п╫п╨я┐я─я│п╟  я▐п╡п╩я▐я▌я┌я│я▐  п╢п╡п╣  п╨п╬п╪п╦я│я│п╦п╦
+п÷я─п╟п╡п╩п╣п╫п╦я▐  п°п░п )  п╡я▀я│п╨п╟п╥п╟п╩п╦я│я▄  11  я┐я┤п╟я│я┌п╫п╦п╨п╬п╡,  п╥п╟ п╡п╟я─п╦п╟п╫я┌ "п▒" (п╨п╬п╫п╨я┐я─я│
+п©я─п╬п╡п╬п╢п╦я┌я│я▐  я│п╬п╥п╢п╟п╡п╟п╣п╪п╬п╧ я│ п╫я┐п╩я▐ п╨п╬п╩п╩п╣пЁп╦п╣п╧ я─п╣п╢п╟п╨я┌п╬я─п╬п╡) - 17, п╬я│я┌п╟п╩я▄п╫я▀п╣ 7
+я┐я┤п╟я│я┌п╫п╦п╨п╬п╡  п╡п╬п╥п╢п╣я─п╤п╟п╩п╦я│я▄  п╬я┌  п╡я▀п╠п╬я─п╟  п╩п╦п╠п╬  п©я─п╬пЁп╬п╩п╬я│п╬п╡п╟п╩п╦ п©я─п╬я┌п╦п╡ п╬п╠п╬п╦я┘
+п╡п╟я─п╦п╟п╫я┌п╬п╡.  п▓  я│п╡я▐п╥п╦ я│ я█я┌п╦п╪ п╨п╬п╬я─п╢п╦п╫п╟я┌п╬я─п╟п╪п╦ п╨п╬п╫п╨я┐я─я│п╟ п©я─п╣п╢п╩п╟пЁп╟п╣я┌я│я▐ я┌п╟п╨п╬п╣
+я─п╣я┬п╣п╫п╦п╣:  я│п╣п╧я┤п╟я│  п╨п╬п╫п╨я┐я─я│ я│я┤п╦я┌п╟п╣я┌я│я▐ п©я─п╬п╡п╣п╢п╣п╫п╫я▀п╪ я│п╬п╡п╪п╣я│я┌п╫п╬ п╦ п╨п╬п╪п╦я│я│п╦я▐п╪п╦
+п÷я─п╟п╡п╩п╣п╫п╦я▐ п°п░п , п╦ я│п╬п╬п╠я┴п╣я│я┌п╡п╬п╪ я─п╣п╢п╟п╨я┌п╬я─п╬п╡ (я█п╨я│п©п╣я─я┌п╫п╬п╧ пЁя─я┐п©п©п╬п╧ п╨п╬п╫п╨я┐я─я│п╟).
 
-В  дальнейшем  предполагается на основе экспертной группы сформировать
-Коллегию (Гильдию) редакторов и передать ей право разработки Положения
-о  конкурсе  2008  года,  а  также  решения  всех возникающих при этом
-спорных вопросов.
+п▓  п╢п╟п╩я▄п╫п╣п╧я┬п╣п╪  п©я─п╣п╢п©п╬п╩п╟пЁп╟п╣я┌я│я▐ п╫п╟ п╬я│п╫п╬п╡п╣ я█п╨я│п©п╣я─я┌п╫п╬п╧ пЁя─я┐п©п©я▀ я│я└п╬я─п╪п╦я─п╬п╡п╟я┌я▄
+п п╬п╩п╩п╣пЁп╦я▌ (п⌠п╦п╩я▄п╢п╦я▌) я─п╣п╢п╟п╨я┌п╬я─п╬п╡ п╦ п©п╣я─п╣п╢п╟я┌я▄ п╣п╧ п©я─п╟п╡п╬ я─п╟п╥я─п╟п╠п╬я┌п╨п╦ п÷п╬п╩п╬п╤п╣п╫п╦я▐
+п╬  п╨п╬п╫п╨я┐я─я│п╣  2008  пЁп╬п╢п╟,  п╟  я┌п╟п╨п╤п╣  я─п╣я┬п╣п╫п╦я▐  п╡я│п╣я┘ п╡п╬п╥п╫п╦п╨п╟я▌я┴п╦я┘ п©я─п╦ я█я┌п╬п╪
+я│п©п╬я─п╫я▀я┘ п╡п╬п©я─п╬я│п╬п╡.
 
-Теперь собственно об итогах первого этапа конкурса.
+п╒п╣п©п╣я─я▄ я│п╬п╠я│я┌п╡п╣п╫п╫п╬ п╬п╠ п╦я┌п╬пЁп╟я┘ п©п╣я─п╡п╬пЁп╬ я█я┌п╟п©п╟ п╨п╬п╫п╨я┐я─я│п╟.
 
-Координаторы  приняли решение опубликовать верхушку списка по порядку,
-а  следующих  упомянутых  в  голосованиях  редакторов  перечислить  по
-алфавиту.  Кроме  того,  параллельно  со  вторым этапом голосования мы
-предложим  вам ответить на вопрос, можно ли опубликовать итоги первого
-этапа с распределением баллов.
+п п╬п╬я─п╢п╦п╫п╟я┌п╬я─я▀  п©я─п╦п╫я▐п╩п╦ я─п╣я┬п╣п╫п╦п╣ п╬п©я┐п╠п╩п╦п╨п╬п╡п╟я┌я▄ п╡п╣я─я┘я┐я┬п╨я┐ я│п©п╦я│п╨п╟ п©п╬ п©п╬я─я▐п╢п╨я┐,
+п╟  я│п╩п╣п╢я┐я▌я┴п╦я┘  я┐п©п╬п╪я▐п╫я┐я┌я▀я┘  п╡  пЁп╬п╩п╬я│п╬п╡п╟п╫п╦я▐я┘  я─п╣п╢п╟п╨я┌п╬я─п╬п╡  п©п╣я─п╣я┤п╦я│п╩п╦я┌я▄  п©п╬
+п╟п╩я└п╟п╡п╦я┌я┐.  п я─п╬п╪п╣  я┌п╬пЁп╬,  п©п╟я─п╟п╩п╩п╣п╩я▄п╫п╬  я│п╬  п╡я┌п╬я─я▀п╪ я█я┌п╟п©п╬п╪ пЁп╬п╩п╬я│п╬п╡п╟п╫п╦я▐ п╪я▀
+п©я─п╣п╢п╩п╬п╤п╦п╪  п╡п╟п╪ п╬я┌п╡п╣я┌п╦я┌я▄ п╫п╟ п╡п╬п©я─п╬я│, п╪п╬п╤п╫п╬ п╩п╦ п╬п©я┐п╠п╩п╦п╨п╬п╡п╟я┌я▄ п╦я┌п╬пЁп╦ п©п╣я─п╡п╬пЁп╬
+я█я┌п╟п©п╟ я│ я─п╟я│п©я─п╣п╢п╣п╩п╣п╫п╦п╣п╪ п╠п╟п╩п╩п╬п╡.
 
-TOP-12 первого этапа:
+TOP-12 п©п╣я─п╡п╬пЁп╬ я█я┌п╟п©п╟:
 
-  1. Константин Науменко
-  2. Борис Моносов
-  3. Евгений Поникаров
-  4. Андрей Абрамов
-  5. Юрий Выменец
-6-7. Дмитрий Башук
-6-7. Дмитрий Борок
-8-9. Михаил Перлин
-8-9. Мишель Матвеев
-10-12. Алексей Рабин
-10-12. Наталья Кудряшова
-10-12. Сергей Николенко
+  1. п п╬п╫я│я┌п╟п╫я┌п╦п╫ п²п╟я┐п╪п╣п╫п╨п╬
+  2. п▒п╬я─п╦я│ п°п╬п╫п╬я│п╬п╡
+  3. п∙п╡пЁп╣п╫п╦п╧ п÷п╬п╫п╦п╨п╟я─п╬п╡
+  4. п░п╫п╢я─п╣п╧ п░п╠я─п╟п╪п╬п╡
+  5. п╝я─п╦п╧ п▓я▀п╪п╣п╫п╣я├
+6-7. п■п╪п╦я┌я─п╦п╧ п▒п╟я┬я┐п╨
+6-7. п■п╪п╦я┌я─п╦п╧ п▒п╬я─п╬п╨
+8-9. п°п╦я┘п╟п╦п╩ п÷п╣я─п╩п╦п╫
+8-9. п°п╦я┬п╣п╩я▄ п°п╟я┌п╡п╣п╣п╡
+10-12. п░п╩п╣п╨я│п╣п╧ п═п╟п╠п╦п╫
+10-12. п²п╟я┌п╟п╩я▄я▐ п я┐п╢я─я▐я┬п╬п╡п╟
+10-12. п║п╣я─пЁп╣п╧ п²п╦п╨п╬п╩п╣п╫п╨п╬
 
-Остальные редакторы, упомянутые в голосованиях:
-Владимир Белкин
-Алексей Богословский
-Владимир Брайман
-Александра Брутер
-Борис Гуревич
-Дмитрий Жарков
-Михаил Иванов
-Константин Кноп
-Андрей Кузьма
-Александр Либер
-Михаил Малкин
-Елена Орлова
-Павел Петров
-Максим Поташев
-Илья Ратнер
-Евгений Рубашкин
-Ренат Хайбуллин
-Александр Шапиро
-Ирина Шихова
+п·я│я┌п╟п╩я▄п╫я▀п╣ я─п╣п╢п╟п╨я┌п╬я─я▀, я┐п©п╬п╪я▐п╫я┐я┌я▀п╣ п╡ пЁп╬п╩п╬я│п╬п╡п╟п╫п╦я▐я┘:
+п▓п╩п╟п╢п╦п╪п╦я─ п▒п╣п╩п╨п╦п╫
+п░п╩п╣п╨я│п╣п╧ п▒п╬пЁп╬я│п╩п╬п╡я│п╨п╦п╧
+п▓п╩п╟п╢п╦п╪п╦я─ п▒я─п╟п╧п╪п╟п╫
+п░п╩п╣п╨я│п╟п╫п╢я─п╟ п▒я─я┐я┌п╣я─
+п▒п╬я─п╦я│ п⌠я┐я─п╣п╡п╦я┤
+п■п╪п╦я┌я─п╦п╧ п√п╟я─п╨п╬п╡
+п°п╦я┘п╟п╦п╩ п≤п╡п╟п╫п╬п╡
+п п╬п╫я│я┌п╟п╫я┌п╦п╫ п п╫п╬п©
+п░п╫п╢я─п╣п╧ п я┐п╥я▄п╪п╟
+п░п╩п╣п╨я│п╟п╫п╢я─ п⌡п╦п╠п╣я─
+п°п╦я┘п╟п╦п╩ п°п╟п╩п╨п╦п╫
+п∙п╩п╣п╫п╟ п·я─п╩п╬п╡п╟
+п÷п╟п╡п╣п╩ п÷п╣я┌я─п╬п╡
+п°п╟п╨я│п╦п╪ п÷п╬я┌п╟я┬п╣п╡
+п≤п╩я▄я▐ п═п╟я┌п╫п╣я─
+п∙п╡пЁп╣п╫п╦п╧ п═я┐п╠п╟я┬п╨п╦п╫
+п═п╣п╫п╟я┌ п╔п╟п╧п╠я┐п╩п╩п╦п╫
+п░п╩п╣п╨я│п╟п╫п╢я─ п╗п╟п©п╦я─п╬
+п≤я─п╦п╫п╟ п╗п╦я┘п╬п╡п╟
 
-Таким образом, лауреатами конкурса и участниками второго этапа стали
-(в алфавитном порядке): Борис Моносов, Константин Науменко и Евгений Поникаров.
+п╒п╟п╨п╦п╪ п╬п╠я─п╟п╥п╬п╪, п╩п╟я┐я─п╣п╟я┌п╟п╪п╦ п╨п╬п╫п╨я┐я─я│п╟ п╦ я┐я┤п╟я│я┌п╫п╦п╨п╟п╪п╦ п╡я┌п╬я─п╬пЁп╬ я█я┌п╟п©п╟ я│я┌п╟п╩п╦
+(п╡ п╟п╩я└п╟п╡п╦я┌п╫п╬п╪ п©п╬я─я▐п╢п╨п╣): п▒п╬я─п╦я│ п°п╬п╫п╬я│п╬п╡, п п╬п╫я│я┌п╟п╫я┌п╦п╫ п²п╟я┐п╪п╣п╫п╨п╬ п╦ п∙п╡пЁп╣п╫п╦п╧ п÷п╬п╫п╦п╨п╟я─п╬п╡.
 
-Координаторы конкурса
-  Юлия Воробьёва, Константин Кноп
-</pre>
-</body></html>
+п п╬п╬я─п╢п╦п╫п╟я┌п╬я─я▀ п╨п╬п╫п╨я┐я─я│п╟
+  п╝п╩п╦я▐ п▓п╬я─п╬п╠я▄я▒п╡п╟, п п╬п╫я│я┌п╟п╫я┌п╦п╫ п п╫п╬п©
+</pre
+    >
+  </body>
+</html>
