--- a/ui/static/arch/editor2007itog2.htm
+++ b/ui/static/arch/editor2007itog2.htm
@@ -1,76 +1,80 @@
-<html><body><pre>
-Конкурс "Редактор года" (см. <a href="editor2007rules.htm">Положение</a>, <a href="editor2007list.htm">список турниров</a>, 
-<a href="editor2007itog1.htm">итоги 1 тура</a>) завершен. 
+<html>
+  <body>
+    <pre>
+РљРѕРЅРєСѓСЂСЃ "Р РµРґР°РєС‚РѕСЂ РіРѕРґР°" (СЃРј. <a href="editor2007rules.htm">РџРѕР»РѕР¶РµРЅРёРµ</a>, <a href="editor2007list.htm">СЃРїРёСЃРѕРє С‚СѓСЂРЅРёСЂРѕРІ</a>,
+<a href="editor2007itog1.htm">РёС‚РѕРіРё 1 С‚СѓСЂР°</a>) Р·Р°РІРµСЂС€РµРЅ.
 
-Всего в двух турах голосования приняли участие 38 редакторов 
-(в первом - 35, во втором - 32).
+Р’СЃРµРіРѕ РІ РґРІСѓС… С‚СѓСЂР°С… РіРѕР»РѕСЃРѕРІР°РЅРёСЏ РїСЂРёРЅСЏР»Рё СѓС‡Р°СЃС‚РёРµ 38 СЂРµРґР°РєС‚РѕСЂРѕРІ
+(РІ РїРµСЂРІРѕРј - 35, РІРѕ РІС‚РѕСЂРѕРј - 32).
 
-Итоги будут подводиться и публиковаться с указанием набранных очков 
-(Результат по  соответствующему пункту голосования редакторов: 
-"за" - 20, "все равно" - 11, "против" - 1.)
+РС‚РѕРіРё Р±СѓРґСѓС‚ РїРѕРґРІРѕРґРёС‚СЊСЃСЏ Рё РїСѓР±Р»РёРєРѕРІР°С‚СЊСЃСЏ СЃ СѓРєР°Р·Р°РЅРёРµРј РЅР°Р±СЂР°РЅРЅС‹С… РѕС‡РєРѕРІ
+(Р РµР·СѓР»СЊС‚Р°С‚ РїРѕ  СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РµРјСѓ РїСѓРЅРєС‚Сѓ РіРѕР»РѕСЃРѕРІР°РЅРёСЏ СЂРµРґР°РєС‚РѕСЂРѕРІ:
+"Р·Р°" - 20, "РІСЃРµ СЂР°РІРЅРѕ" - 11, "РїСЂРѕС‚РёРІ" - 1.)
 
-Подсчет по пунктам голосования:
+РџРѕРґСЃС‡РµС‚ РїРѕ РїСѓРЅРєС‚Р°Рј РіРѕР»РѕСЃРѕРІР°РЅРёСЏ:
 
-<b>1.1. Имя и фамилия редактора-1:</b>
+<b>1.1. РРјСЏ Рё С„Р°РјРёР»РёСЏ СЂРµРґР°РєС‚РѕСЂР°-1:</b>
 
-Борис Моносов - 13 раз
-Константин Науменко - 12 раз
-Евгений Поникаров - 5 раз
-Никто не указан - 2 раза
+Р‘РѕСЂРёСЃ РњРѕРЅРѕСЃРѕРІ - 13 СЂР°Р·
+РљРѕРЅСЃС‚Р°РЅС‚РёРЅ РќР°СѓРјРµРЅРєРѕ - 12 СЂР°Р·
+Р•РІРіРµРЅРёР№ РџРѕРЅРёРєР°СЂРѕРІ - 5 СЂР°Р·
+РќРёРєС‚Рѕ РЅРµ СѓРєР°Р·Р°РЅ - 2 СЂР°Р·Р°
 
-<b>1.2. Имя и фамилия редактора-2:</b>
+<b>1.2. РРјСЏ Рё С„Р°РјРёР»РёСЏ СЂРµРґР°РєС‚РѕСЂР°-2:</b>
 
-Борис Моносов - 7 раз
-Константин Науменко - 8 раз
-Евгений Поникаров - 9 раз
-Никто не указан - 8 раз
+Р‘РѕСЂРёСЃ РњРѕРЅРѕСЃРѕРІ - 7 СЂР°Р·
+РљРѕРЅСЃС‚Р°РЅС‚РёРЅ РќР°СѓРјРµРЅРєРѕ - 8 СЂР°Р·
+Р•РІРіРµРЅРёР№ РџРѕРЅРёРєР°СЂРѕРІ - 9 СЂР°Р·
+РќРёРєС‚Рѕ РЅРµ СѓРєР°Р·Р°РЅ - 8 СЂР°Р·
 
-<b>1.3. Имя и фамилия редактора-3:</b>
+<b>1.3. РРјСЏ Рё С„Р°РјРёР»РёСЏ СЂРµРґР°РєС‚РѕСЂР°-3:</b>
 
-Борис Моносов - 7 раз
-Константин Науменко - 9 раз
-Евгений Поникаров - 12 раз
-Никто не указан - 4 раза
+Р‘РѕСЂРёСЃ РњРѕРЅРѕСЃРѕРІ - 7 СЂР°Р·
+РљРѕРЅСЃС‚Р°РЅС‚РёРЅ РќР°СѓРјРµРЅРєРѕ - 9 СЂР°Р·
+Р•РІРіРµРЅРёР№ РџРѕРЅРёРєР°СЂРѕРІ - 12 СЂР°Р·
+РќРёРєС‚Рѕ РЅРµ СѓРєР°Р·Р°РЅ - 4 СЂР°Р·Р°
 
-<b>Итого:</b>
+<b>РС‚РѕРіРѕ:</b>
 
-Борис Моносов:       39+14+ 7 = 60 очков
-Константин Науменко: 36+16+ 9 = 61 очко
-Евгений Поникаров:   15+18+12 = 45 очков
+Р‘РѕСЂРёСЃ РњРѕРЅРѕСЃРѕРІ:       39+14+ 7 = 60 РѕС‡РєРѕРІ
+РљРѕРЅСЃС‚Р°РЅС‚РёРЅ РќР°СѓРјРµРЅРєРѕ: 36+16+ 9 = 61 РѕС‡РєРѕ
+Р•РІРіРµРЅРёР№ РџРѕРЅРёРєР°СЂРѕРІ:   15+18+12 = 45 РѕС‡РєРѕРІ
 
-Таким образом с перевесом в одно очко 
-первым лауреатом конкурса "Редактор года" 
-стал Константин Науменко (Киев, Украина).
+РўР°РєРёРј РѕР±СЂР°Р·РѕРј СЃ РїРµСЂРµРІРµСЃРѕРј РІ РѕРґРЅРѕ РѕС‡РєРѕ
+РїРµСЂРІС‹Рј Р»Р°СѓСЂРµР°С‚РѕРј РєРѕРЅРєСѓСЂСЃР° "Р РµРґР°РєС‚РѕСЂ РіРѕРґР°"
+СЃС‚Р°Р» РљРѕРЅСЃС‚Р°РЅС‚РёРЅ РќР°СѓРјРµРЅРєРѕ (РљРёРµРІ, РЈРєСЂР°РёРЅР°).
 
-Второе место - Борис Моносов (Санкт-Петербург, Россия)
-Третье место - Евгений Поникаров (Петродворец/Санкт-Петербург, Россия)
+Р’С‚РѕСЂРѕРµ РјРµСЃС‚Рѕ - Р‘РѕСЂРёСЃ РњРѕРЅРѕСЃРѕРІ (РЎР°РЅРєС‚-РџРµС‚РµСЂР±СѓСЂРі, Р РѕСЃСЃРёСЏ)
+РўСЂРµС‚СЊРµ РјРµСЃС‚Рѕ - Р•РІРіРµРЅРёР№ РџРѕРЅРёРєР°СЂРѕРІ (РџРµС‚СЂРѕРґРІРѕСЂРµС†/РЎР°РЅРєС‚-РџРµС‚РµСЂР±СѓСЂРі, Р РѕСЃСЃРёСЏ)
 
-Поздравляем лауреатов с победой в конкурсе!
-Разрешите от всех вас пожелать им дальнейших творческих (и не только) успехов!
+РџРѕР·РґСЂР°РІР»СЏРµРј Р»Р°СѓСЂРµР°С‚РѕРІ СЃ РїРѕР±РµРґРѕР№ РІ РєРѕРЅРєСѓСЂСЃРµ!
+Р Р°Р·СЂРµС€РёС‚Рµ РѕС‚ РІСЃРµС… РІР°СЃ РїРѕР¶РµР»Р°С‚СЊ РёРј РґР°Р»СЊРЅРµР№С€РёС… С‚РІРѕСЂС‡РµСЃРєРёС… (Рё РЅРµ С‚РѕР»СЊРєРѕ) СѓСЃРїРµС…РѕРІ!
 
-<b>Публикуем ТОП-12 первого тура конкурса с набранными голосами:</b>
+<b>РџСѓР±Р»РёРєСѓРµРј РўРћРџ-12 РїРµСЂРІРѕРіРѕ С‚СѓСЂР° РєРѕРЅРєСѓСЂСЃР° СЃ РЅР°Р±СЂР°РЅРЅС‹РјРё РіРѕР»РѕСЃР°РјРё:</b>
 
-                                   Итого 
-  1. Константин Науменко     7 6 5  38       
-  2. Борис Моносов           4 4 5  25    
-  3. Евгений Поникаров       4 2 2  18    
-  4. Андрей Абрамов          2 4 1  15    
-  5. Юрий Выменец            3 2 1  14    
-6-7. Дмитрий Башук           1 2 1   8     
-6-7. Дмитрий Борок           0 3 2   8     
-8-9. Михаил Перлин           2 0 1   7     
-8-9. Мишель Матвеев          1 1 2   7     
-10-12. Алексей Рабин         1 1 1   6     
-10-12. Наталья Кудряшова     2 0 0   6     
-10-12. Сергей Николенко      0 2 2   6     
+                                   РС‚РѕРіРѕ
+  1. РљРѕРЅСЃС‚Р°РЅС‚РёРЅ РќР°СѓРјРµРЅРєРѕ     7 6 5  38
+  2. Р‘РѕСЂРёСЃ РњРѕРЅРѕСЃРѕРІ           4 4 5  25
+  3. Р•РІРіРµРЅРёР№ РџРѕРЅРёРєР°СЂРѕРІ       4 2 2  18
+  4. РђРЅРґСЂРµР№ РђР±СЂР°РјРѕРІ          2 4 1  15
+  5. Р®СЂРёР№ Р’С‹РјРµРЅРµС†            3 2 1  14
+6-7. Р”РјРёС‚СЂРёР№ Р‘Р°С€СѓРє           1 2 1   8
+6-7. Р”РјРёС‚СЂРёР№ Р‘РѕСЂРѕРє           0 3 2   8
+8-9. РњРёС…Р°РёР» РџРµСЂР»РёРЅ           2 0 1   7
+8-9. РњРёС€РµР»СЊ РњР°С‚РІРµРµРІ          1 1 2   7
+10-12. РђР»РµРєСЃРµР№ Р Р°Р±РёРЅ         1 1 1   6
+10-12. РќР°С‚Р°Р»СЊСЏ РљСѓРґСЂСЏС€РѕРІР°     2 0 0   6
+10-12. РЎРµСЂРіРµР№ РќРёРєРѕР»РµРЅРєРѕ      0 2 2   6
 
-Мы хотим принести извинения всем, кто ждал упоминания об итогах конкурса во
-время ЧМ в Светлогорске - и не дождался. Очень хочется написать "нашей вины
-в этом нет", но, видимо, раз мы обещали и не сумели этого добиться, -
-значит, виноваты.
+РњС‹ С…РѕС‚РёРј РїСЂРёРЅРµСЃС‚Рё РёР·РІРёРЅРµРЅРёСЏ РІСЃРµРј, РєС‚Рѕ Р¶РґР°Р» СѓРїРѕРјРёРЅР°РЅРёСЏ РѕР± РёС‚РѕРіР°С… РєРѕРЅРєСѓСЂСЃР° РІРѕ
+РІСЂРµРјСЏ Р§Рњ РІ РЎРІРµС‚Р»РѕРіРѕСЂСЃРєРµ - Рё РЅРµ РґРѕР¶РґР°Р»СЃСЏ. РћС‡РµРЅСЊ С…РѕС‡РµС‚СЃСЏ РЅР°РїРёСЃР°С‚СЊ "РЅР°С€РµР№ РІРёРЅС‹
+РІ СЌС‚РѕРј РЅРµС‚", РЅРѕ, РІРёРґРёРјРѕ, СЂР°Р· РјС‹ РѕР±РµС‰Р°Р»Рё Рё РЅРµ СЃСѓРјРµР»Рё СЌС‚РѕРіРѕ РґРѕР±РёС‚СЊСЃСЏ, -
+Р·РЅР°С‡РёС‚, РІРёРЅРѕРІР°С‚С‹.
 
-Огромное спасибо всем участникам за сотрудничество и поддержку идеи.
+РћРіСЂРѕРјРЅРѕРµ СЃРїР°СЃРёР±Рѕ РІСЃРµРј СѓС‡Р°СЃС‚РЅРёРєР°Рј Р·Р° СЃРѕС‚СЂСѓРґРЅРёС‡РµСЃС‚РІРѕ Рё РїРѕРґРґРµСЂР¶РєСѓ РёРґРµРё.
 
-Юлия Воробьева
-Константин Кноп
-</pre></body></html>
+Р®Р»РёСЏ Р’РѕСЂРѕР±СЊРµРІР°
+РљРѕРЅСЃС‚Р°РЅС‚РёРЅ РљРЅРѕРї
+</pre>
+  </body>
+</html>
