--- a/ui/static/arch/editor2008rules.html
+++ b/ui/static/arch/editor2008rules.html
@@ -1,49 +1,109 @@
-<html><head>
-<meta http-equiv=Content-Type content="text/html; charset=koi8-r">
-<title>Конкурс &quot;Лучший редактор 2008 года&quot;</title>
-</head>
-<body lang=RU>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>п п╬п╫п╨я┐я─я│ &quot;п⌡я┐я┤я┬п╦п╧ я─п╣п╢п╟п╨я┌п╬я─ 2008 пЁп╬п╢п╟&quot;</title>
+  </head>
+  <body lang="RU">
+    <h1>п÷п╬п╩п╬п╤п╣п╫п╦п╣ п╬ п╨п╬п╫п╨я┐я─я│п╣ &quot;п═п╣п╢п╟п╨я┌п╬я─ пЁп╬п╢п╟ - 2008&quot;</h1>
 
-<h1>Положение о конкурсе &quot;Редактор года - 2008&quot;</h1>
+    <h3>1. п╕п╣п╩п╦ п╨п╬п╫п╨я┐я─я│п╟</h3>
 
-<h3>1. Цели конкурса</h3>
+    <p align="justify">
+      п≈п╟п╢п╟я┤п╣п╧ п╦ п╬я│п╫п╬п╡п╫п╬п╧ я├п╣п╩я▄я▌ п╨п╬п╫п╨я┐я─я│п╟ я▐п╡п╩я▐п╣я┌я│я▐ п╫п╟пЁя─п╟п╤п╢п╣п╫п╦п╣ п╡я▀я│я┬п╦я┘ п╢п╬я│я┌п╦п╤п╣п╫п╦п╧
+      п©п╬ п╦я┌п╬пЁп╟п╪ п©я─п╬я┬п╣п╢я┬п╣пЁп╬ п╦пЁя─п╬п╡п╬пЁп╬ я│п╣п╥п╬п╫п╟ п╡ п╫п╬п╪п╦п╫п╟я├п╦п╦ &quot;п⌡я┐я┤я┬п╦п╧ я─п╣п╢п╟п╨я┌п╬я─
+      пЁп╬п╢п╟&quot;.
+    </p>
 
-<p align="justify">Задачей и основной целью конкурса является награждение высших достижений по итогам прошедшего игрового сезона в номинации &quot;Лучший редактор года&quot;.</p>
+    <h3>2. п²п╬п╪п╦п╫п╟п╫я┌я▀</h3>
 
-<h3>2. Номинанты</h3>
+    <p>2.1. п▓ я│п©п╦я│п╬п╨ п╫п╬п╪п╦п╫п╟п╫я┌п╬п╡ п╪п╬пЁя┐я┌ п╠я▀я┌я▄ п╡п╨п╩я▌я┤п╣п╫я▀:</p>
 
-<p>2.1. В список номинантов могут быть включены:</p>
+    <p align="justify"></p>
+    <ul type="disc">
+      <li>
+        я│п╣я─я┌п╦я└п╦я├п╦я─п╬п╡п╟п╫п╫я▀п╣ я─п╣п╢п╟п╨я┌п╬я─я▀ п°п░п , п©п╬п╢пЁп╬я┌п╬п╡п╦п╡я┬п╦п╣ п©п╟п╨п╣я┌ п╡п╬п©я─п╬я│п╬п╡ п╢п╩я▐
+        я┌я┐я─п╫п╦я─п╟, п©я─п╬я┬п╣п╢я┬п╣пЁп╬ п╡ я│п╣п╥п╬п╫ я│ 1&nbsp;п╟п╡пЁя┐я│я┌п╟ 2007 пЁп╬п╢п╟ п©п╬ 31&nbsp;п╦я▌п╩я▐
+        2008 пЁп╬п╢п╟;
+      </li>
+      <li>
+        я─п╣п╢п╟п╨я┌п╬я─я▀, п©п╬п╢пЁп╬я┌п╬п╡п╦п╡я┬п╦п╣ п©п╟п╨п╣я┌ п╡п╬п©я─п╬я│п╬п╡ п╢п╩я▐ п╒п▓пё, п©я─п╬я┬п╣п╢я┬п╣пЁп╬ п╡ я┌п╣ п╤п╣
+        я│я─п╬п╨п╦ (п╒п▓пё - я┌я┐я─п╫п╦я─я▀ п╡я▀я│я┬п╣пЁп╬ я┐я─п╬п╡п╫я▐ - я┤п╣п╪п©п╦п╬п╫п╟я┌я▀ я│я┌я─п╟п╫, я█я┌п╟п©я▀ п п°, п я┐п╠п╬п╨
+        п²п╟я├п╦п╧, п╖п°);
+      </li>
+      <li>
+        я─п╣п╢п╟п╨я┌п╬я─я▀ п╨я─я┐п©п╫п╣п╧я┬п╦я┘ я│п╦п╫я┘я─п╬п╫п╫я▀я┘ я┌я┐я─п╫п╦я─п╬п╡ (п·я┌п╨я─я▀я┌я▀п╧ п╨я┐п╠п╬п╨ п═п╬я│я│п╦п╦, п я┐п╠п╬п╨
+        п⌠п╬я─п╬п╢п╬п╡, п я┐п╠п╬п╨ п÷я─п╬п╡п╦п╫я├п╦п╧, п·п▓п║п╖, п°п п°);
+      </li>
+      <li>
+        я─п╣п╢п╟п╨я┌п╬я─я▀ п╫п╣ п╪п╣п╫п╣п╣ я┤п╣п╪ п╢п╡я┐я┘ я┌я┐я─п╫п╦я─п╬п╡ я┐п╨п╟п╥п╟п╫п╫п╬пЁп╬ я│п╣п╥п╬п╫п╟, п╡ п╨п╬я┌п╬я─я▀я┘
+        п©я─п╦п╫п╦п╪п╟п╩п╦ я┐я┤п╟я│я┌п╦п╣ п╨п╬п╪п╟п╫п╢я▀ п╠п╬п╩п╣п╣ я┤п╣п╪ п╬п╢п╫п╬п╧ я│я┌я─п╟п╫я▀ п╦п╩п╦ п╠п╬п╩п╣п╣ я┤п╣п╪ п╬п╢п╫п╬пЁп╬
+        я─п╣пЁп╦п╬п╫п╟ п═п╬я│я│п╦п╦, пёп╨я─п╟п╦п╫я▀ п╦ п▒п╣п╩п╟я─я┐я│п╦. (п÷п╬п╢ &quot;я─п╣пЁп╦п╬п╫п╬п╪&quot; п╢п╩я▐
+        п╡я▀я┬п╣я┐п╨п╟п╥п╟п╫п╫я▀я┘ я│я┌я─п╟п╫ п©п╬п╫п╦п╪п╟п╣я┌я│я▐ п╬п╠п╩п╟я│я┌я▄ п╦п╩п╦ п╦п╫п╬п╧ я─п╟п╡п╫п╬п╥п╫п╟я┤п╫я▀п╧ я│я┐п╠я┼п╣п╨я┌
+        пЁп╬я│я┐п╢п╟я─я│я┌п╡п╣п╫п╫п╬пЁп╬ я┐я│я┌я─п╬п╧я│я┌п╡п╟.)
+      </li>
+    </ul>
 
-<p align="justify"><ul type=disc>
- <li>сертифицированные редакторы МАК, подготовившие пакет вопросов для турнира, прошедшего в сезон с 1&nbsp;августа 2007 года по 31&nbsp;июля 2008 года;</li>
- <li>редакторы, подготовившие пакет вопросов для ТВУ, прошедшего в те же сроки (ТВУ - турниры высшего уровня - чемпионаты стран, этапы КМ, Кубок Наций, ЧМ);</li>
- <li>редакторы крупнейших синхронных турниров (Открытый кубок России, Кубок Городов, Кубок Провинций, ОВСЧ, МКМ);</li>
- <li>редакторы не менее чем двух турниров указанного сезона, в которых принимали участие команды более чем одной страны или более чем одного региона России, Украины и Беларуси. (Под &quot;регионом&quot; для вышеуказанных стран понимается область или иной равнозначный субъект государственного устройства.)</li>
-</ul>
+    <p align="justify">
+      2.2. п▓я│п╣ я┐п╨п╟п╥п╟п╫п╫я▀п╣ я─п╣п╢п╟п╨я┌п╬я─я▀ п╡п╨п╩я▌я┤п╟я▌я┌я│я▐ п╡ п╨п╟я┤п╣я│я┌п╡п╣ п╫п╬п╪п╦п╫п╟п╫я┌п╬п╡ п©я─п╦ я┐я│п╩п╬п╡п╦п╦
+      п╦я┘ я│п╬пЁп╩п╟я│п╦я▐ п╫п╟ я┐я┤п╟я│я┌п╦п╣ п╡ п╨п╬п╫п╨я┐я─я│п╣.
+    </p>
 
-<p align="justify">2.2. Все указанные редакторы включаются в качестве номинантов при условии их согласия на участие в конкурсе.</p>
+    <h3>3. п╔п╬п╢ п╨п╬п╫п╨я┐я─я│п╟</h3>
 
-<h3>3. Ход конкурса</h3>
+    <p align="justify">
+      3.1. п╜п╨я│п©п╣я─я┌п╫я┐я▌ пЁя─я┐п©п©я┐ п╨п╬п╫п╨я┐я─я│п╟ (п╜п⌠п ) я│п╬я│я┌п╟п╡п╩я▐я▌я┌ п╡я│п╣ я─п╣п╢п╟п╨я┌п╬я─я▀, п╡п╨п╩я▌я┤п╣п╫п╫я▀п╣
+      п╡ я│п©п╦я│п╬п╨ п╫п╬п╪п╦п╫п╟п╫я┌п╬п╡ п╦ п╡я▀я─п╟п╥п╦п╡я┬п╦п╣ я│п╬пЁп╩п╟я│п╦п╣ я┐я┤п╟я│я┌п╡п╬п╡п╟я┌я▄ п╡ п╜п⌠п . п╖п╩п╣п╫я▀
+      п╜п╨я│п©п╣я─я┌п╫п╬п╧ пЁя─я┐п©п©я▀ п╫п╣ п╪п╬пЁя┐я┌ пЁп╬п╩п╬я│п╬п╡п╟я┌я▄ п╥п╟ я│п╣п╠я▐.
+    </p>
 
-<p align="justify">3.1. Экспертную группу конкурса (ЭГК) составляют все редакторы, включенные в список номинантов и выразившие согласие участвовать в ЭГК. Члены Экспертной группы не могут голосовать за себя.</p>
+    <p align="justify">
+      3.2. <b>п÷п╣я─п╡я▀п╧ я┌я┐я─</b>: п п╬п╬я─п╢п╦п╫п╟я┌п╬я─я▀ п╨п╬п╫п╨я┐я─я│п╟ я│п╬я│я┌п╟п╡п╩я▐я▌я┌ п╦ п╡я▀я│я▀п╩п╟я▌я┌ п╡я│п╣п╪
+      я┐я┤п╟я│я┌п╫п╦п╨п╟п╪ п╜п⌠п  я│п©п╦я│п╬п╨ п╫п╬п╪п╦п╫п╟п╫я┌п╬п╡ (&quot;п╩п╬п╫пЁ-п╩п╦я│я┌&quot;) я│ я┐п╨п╟п╥п╟п╫п╦п╣п╪
+      я┌я┐я─п╫п╦я─п╬п╡ я│п╣п╥п╬п╫п╟, п╨п╬я┌п╬я─я▀п╣ п╦п╪п╦ я─п╣п╢п╟п╨я┌п╦я─п╬п╡п╟п╩п╦я│я▄. п п╟п╤п╢я▀п╧ я┐я┤п╟я│я┌п╫п╦п╨ п╜п⌠п 
+      я│п╬я│я┌п╟п╡п╩я▐п╣я┌ я│п╡п╬п╧ я│п©п╦я│п╬п╨, пЁп╢п╣ я┐п╨п╟п╥я▀п╡п╟п╣я┌ <b>п©я▐я┌я▄</b> п╩я┐я┤я┬п╦я┘ (п©п╬ п╣пЁп╬ п╪п╫п╣п╫п╦я▌)
+      я─п╣п╢п╟п╨я┌п╬я─п╬п╡. п÷п╣я─п╡п╬п╣ п╪п╣я│я┌п╬ п╨п╟п╤п╢п╬пЁп╬ я┌п╟п╨п╬пЁп╬ я│п©п╦я│п╨п╟ п©п╬п╩я┐я┤п╟п╣я┌ 5 п╬я┤п╨п╬п╡ п╡
+      п©я─п╣п╢п╡п╟я─п╦я┌п╣п╩я▄п╫я▀п╧ п╥п╟я┤п╣я┌ пЁп╬п╩п╬я│п╬п╡п╟п╫п╦я▐, п╡я┌п╬я─п╬п╣ - 4, ..., п©я▐я┌п╬п╣ - 1 п╬я┤п╨п╬.
+      п п╬п╬я─п╢п╦п╫п╟я┌п╬я─я▀ п╨п╬п╫п╨я┐я─я│п╟ п©п╬п╢я│я┤п╦я┌я▀п╡п╟я▌я┌ я│я┐п╪п╪я┐ п╬я┤п╨п╬п╡, п╫п╟п╠я─п╟п╫п╫я┐я▌ п╫п╬п╪п╦п╫п╟п╫я┌п╟п╪п╦.
+      п÷п╬я│п╩п╣ я█я┌п╬пЁп╬ п╦п╥ я│п©п╦я│п╨п╟ п╡я▀п╠п╦я─п╟я▌я┌я│я▐ п©я▐я┌я▄ п╫п╬п╪п╦п╫п╟п╫я┌п╬п╡ я│ п╫п╟п╦п╠п╬п╩я▄я┬п╦п╪п╦ п╬я├п╣п╫п╨п╟п╪п╦,
+      п©п╩я▌я│ п╡я│п╣ п╫п╬п╪п╦п╫п╟п╫я┌я▀, п©п╬п╩я┐я┤п╦п╡я┬п╦п╣ я┌я┐ п╤п╣ я│я┐п╪п╪я┐ п╬я┤п╨п╬п╡, я┤я┌п╬ п╦ п©я▐я┌я▀п╧ п╦п╥ я│п©п╦я│п╨п╟.
+      п÷п╬п╩я┐я┤п╦п╡я┬п╦п╧я│я▐ я│п©п╦я│п╬п╨ (&quot;я┬п╬я─я┌-п╩п╦я│я┌&quot;) п╡я▀я│я▀п╩п╟п╣я┌я│я▐ п╡я│п╣п╪ я┐я┤п╟я│я┌п╫п╦п╨п╟п╪ п╜п⌠п 
+      п╢п╩я▐ п╡я┌п╬я─п╬пЁп╬ я┌я┐я─п╟ п╨п╬п╫п╨я┐я─я│п╟.
+    </p>
 
-<p align="justify">3.2. <b>Первый тур</b>: Координаторы конкурса составляют и высылают всем участникам ЭГК список номинантов (&quot;лонг-лист&quot;) с указанием турниров сезона, которые ими редактировались. Каждый участник ЭГК составляет свой список, где указывает <b>пять</b> лучших (по его мнению) редакторов. Первое место каждого такого списка получает 5 очков в предварительный зачет голосования, второе - 4, ..., пятое - 1 очко. 
-Координаторы конкурса подсчитывают сумму очков, набранную номинантами. После этого из списка выбираются пять номинантов с наибольшими оценками, плюс все номинанты, получившие ту же сумму очков, что и пятый из списка. Получившийся список (&quot;шорт-лист&quot;) высылается всем участникам ЭГК для второго тура конкурса.</p>
+    <p align="justify">
+      3.3. <b>п▓я┌п╬я─п╬п╧ я┌я┐я─</b>. п п╟п╤п╢я▀п╧ п╦п╥ я┐я┤п╟я│я┌п╫п╦п╨п╬п╡ п╜п⌠п  я│п╫п╬п╡п╟ я│п╬я│я┌п╟п╡п╩я▐п╣я┌ я│п╡п╬п╧
+      я│п©п╦я│п╬п╨, пЁп╢п╣ я┐п╨п╟п╥я▀п╡п╟п╣я┌ я┌я─п╣я┘ п╩я┐я┤я┬п╦я┘ (п©п╬ п╣пЁп╬ п╪п╫п╣п╫п╦я▌) я─п╣п╢п╟п╨я┌п╬я─п╬п╡ п╦п╥
+      &quot;я┬п╬я─я┌-п╩п╦я│я┌п╟&quot;. п÷п╣я─п╡п╬п╣ п╪п╣я│я┌п╬ п©п╬п╩я┐я┤п╟п╣я┌ 3 п╬я┤п╨п╟ п╡ п╬п╠я┴п╦п╧ п╥п╟я┤п╣я┌
+      пЁп╬п╩п╬я│п╬п╡п╟п╫п╦я▐, п╡я┌п╬я─п╬п╣ - 2, я┌я─п╣я┌я▄п╣ - 1 п╬я┤п╨п╬. п п╬п╬я─п╢п╦п╫п╟я┌п╬я─я▀ п╨п╬п╫п╨я┐я─я│п╟
+      п©п╬п╢я│я┤п╦я┌я▀п╡п╟я▌я┌ я│я┐п╪п╪я┐ п╬я┤п╨п╬п╡, п╫п╟п╠я─п╟п╫п╫я┐я▌ п╫п╬п╪п╦п╫п╟п╫я┌п╟п╪п╦ п╡п╬ п╡я┌п╬я─п╬п╪ я┌я┐я─п╣, п╦ п©п╬п╢п╡п╬п╢я▐я┌
+      п╦я┌п╬пЁп╦ п╨п╬п╫п╨я┐я─я│п╟.
+    </p>
 
-<p align="justify">3.3. <b>Второй тур</b>. Каждый из участников ЭГК снова составляет свой список, где указывает трех лучших (по его мнению) редакторов из &quot;шорт-листа&quot;. Первое место получает 3 очка в общий зачет голосования, второе - 2, третье - 1 очко. Координаторы конкурса подсчитывают сумму очков, набранную номинантами во втором туре, и подводят итоги конкурса.</p>
+    <h3>4. п÷п╬п╠п╣п╢п╦я┌п╣п╩п╦</h3>
 
-<h3>4. Победители</h3>
+    <p align="justify">
+      4.1. п═п╣п╢п╟п╨я┌п╬я─, п╥п╟п╫я▐п╡я┬п╦п╧ п©п╣я─п╡п╬п╣ п╪п╣я│я┌п╬ п╡ п╫п╬п╪п╦п╫п╟я├п╦п╦ &quot;п═п╣п╢п╟п╨я┌п╬я─
+      пЁп╬п╢п╟&quot;, п╫п╟пЁя─п╟п╤п╢п╟п╣я┌я│я▐ п╢п╦п©п╩п╬п╪п╬п╪, п©п╬п╢я┌п╡п╣я─п╤п╢п╟я▌я┴п╦п╪ п╣пЁп╬ я│я┌п╟я┌я┐я│ п©п╬п╠п╣п╢п╦я┌п╣п╩я▐
+      п╨п╬п╫п╨я┐я─я│п╟. п∙я│п╩п╦ п©п╣я─п╡п╬п╣ п╪п╣я│я┌п╬ п©п╬п╢п╣п╩п╣п╫п╬, я┌п╬ п╢п╦п©п╩п╬п╪я▀ п©п╬п╠п╣п╢п╦я┌п╣п╩п╣п╧ п©п╬п╩я┐я┤п╟я▌я┌ п╡я│п╣
+      я─п╣п╢п╟п╨я┌п╬я─я▀, п╦п╪п╣я▌я┴п╦п╣ п╩я┐я┤я┬п╦п╧ я─п╣п╥я┐п╩я▄я┌п╟я┌.
+    </p>
 
-<p align="justify">4.1. Редактор, занявший первое место в номинации &quot;Редактор года&quot;, награждается дипломом, подтверждающим его статус победителя конкурса. Если первое место поделено, то дипломы победителей получают все редакторы, имеющие лучший результат.</p>
+    <p align="justify">
+      4.2. п·я│я┌п╟п╩я▄п╫я▀п╣ я─п╣п╢п╟п╨я┌п╬я─я▀, п╡п╬я┬п╣п╢я┬п╦п╣ п╡ &quot;я┬п╬я─я┌-п╩п╦я│я┌&quot;, п╫п╟пЁя─п╟п╤п╢п╟я▌я┌я│я▐
+      п╢п╦п©п╩п╬п╪п╟п╪п╦, п©п╬п╢я┌п╡п╣я─п╤п╢п╟я▌я┴п╦п╪п╦ п©я─п╦п╥п╬п╡п╬п╣ п╪п╣я│я┌п╬ п╡ п╨п╬п╫п╨я┐я─я│п╣. п°п╣я│я┌п╟ я┐п╨п╟п╥я▀п╡п╟я▌я┌я│я▐ п©п╬
+      п╦я┌п╬пЁп╟п╪ п╡я┌п╬я─п╬пЁп╬ я┌я┐я─п╟ пЁп╬п╩п╬я│п╬п╡п╟п╫п╦я▐.
+    </p>
 
-<p align="justify">4.2. Остальные редакторы, вошедшие в &quot;шорт-лист&quot;, награждаются дипломами, подтверждающими призовое место в конкурсе. Места указываются по итогам второго тура голосования. </p>
+    <h3>5. пёя┤я─п╣п╢п╦я┌п╣п╩п╦ п╦ п╬я─пЁп╟п╫п╦п╥п╟я┌п╬я─я▀</h3>
 
-<h3>5. Учредители и организаторы </h3>
+    <p align="justify">
+      5.1. п п╬п╫п╨я┐я─я│ п©я─п╬п╡п╬п╢п╦я┌я│я▐ п п╬п╩п╩п╣пЁп╦п╣п╧ я─п╣п╢п╟п╨я┌п╬я─п╬п╡ п╖п⌠п  п©я─п╦ я┐я┤п╟я│я┌п╦п╦ п п╬п╪п╦я│я│п╦п╦ п©п╬
+      п╦я│я┌п╬я─п╦п╦, я│я┌п╟я┌п╦я│я┌п╦п╨п╣ п╦ п╫п╟пЁя─п╟п╤п╢п╣п╫п╦я▐п╪ п╦ п╒я┐я─п╫п╦я─п╫п╬п╧ п╨п╬п╪п╦я│я│п╦п╦ п°п░п  п╖п⌠п .
+    </p>
 
-<p align="justify">5.1. Конкурс проводится 
-Коллегией редакторов ЧГК при участии Комиссии по истории, статистике и 
-награждениям и Турнирной комиссии МАК ЧГК.</p>
-
-<p align="justify">5.2. Координатор конкурса: Константин Кноп (Санкт-Петербург, Россия).</p>
-
-</body></html>
+    <p align="justify">
+      5.2. п п╬п╬я─п╢п╦п╫п╟я┌п╬я─ п╨п╬п╫п╨я┐я─я│п╟: п п╬п╫я│я┌п╟п╫я┌п╦п╫ п п╫п╬п© (п║п╟п╫п╨я┌-п÷п╣я┌п╣я─п╠я┐я─пЁ, п═п╬я│я│п╦я▐).
+    </p>
+  </body>
+</html>
