--- a/ui/static/arch/hosting.html
+++ b/ui/static/arch/hosting.html
@@ -1,73 +1,96 @@
+<!DOCTYPE html>
 <html>
-<body>
-<h3>Некоторые правила хостинга на <a href="http://chgk.info">chgk.info</a></h3>
+  <head>
+    <meta charset="utf8" />
+    <title>РҐРѕСЃС‚РёРЅРі</title>
+  </head>
+  <body>
+    <h3>
+      РќРµРєРѕС‚РѕСЂС‹Рµ РїСЂР°РІРёР»Р° С…РѕСЃС‚РёРЅРіР° РЅР° <a href="http://chgk.info">chgk.info</a>
+    </h3>
 
-<p>Эта информация для тех, кто хочет получить хостинг и/или адрес у нас
-на сервере для сайта своего клуба, команды, турнира. Пишите на адрес
-попечительского совета в свободной форме. Пожалуйста, в письме
-представьтесь, дайте информацию о клубе/проекте/турнире, а также
-укажите, какое именно доменное имя вы хотели бы получить.
+    <p>
+      Р­С‚Р° РёРЅС„РѕСЂРјР°С†РёСЏ РґР»СЏ С‚РµС…, РєС‚Рѕ С…РѕС‡РµС‚ РїРѕР»СѓС‡РёС‚СЊ С…РѕСЃС‚РёРЅРі Рё/РёР»Рё Р°РґСЂРµСЃ Сѓ РЅР°СЃ РЅР°
+      СЃРµСЂРІРµСЂРµ РґР»СЏ СЃР°Р№С‚Р° СЃРІРѕРµРіРѕ РєР»СѓР±Р°, РєРѕРјР°РЅРґС‹, С‚СѓСЂРЅРёСЂР°. РџРёС€РёС‚Рµ РЅР° Р°РґСЂРµСЃ
+      РїРѕРїРµС‡РёС‚РµР»СЊСЃРєРѕРіРѕ СЃРѕРІРµС‚Р° РІ СЃРІРѕР±РѕРґРЅРѕР№ С„РѕСЂРјРµ. РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РІ РїРёСЃСЊРјРµ
+      РїСЂРµРґСЃС‚Р°РІСЊС‚РµСЃСЊ, РґР°Р№С‚Рµ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РєР»СѓР±Рµ/РїСЂРѕРµРєС‚Рµ/С‚СѓСЂРЅРёСЂРµ, Р° С‚Р°РєР¶Рµ СѓРєР°Р¶РёС‚Рµ,
+      РєР°РєРѕРµ РёРјРµРЅРЅРѕ РґРѕРјРµРЅРЅРѕРµ РёРјСЏ РІС‹ С…РѕС‚РµР»Рё Р±С‹ РїРѕР»СѓС‡РёС‚СЊ.
+    </p>
 
-<p>Как правило, для любых проектов и сайтов, имеющих отношение к ЧГК,
-мы создаем субдомен <b>ваш_ресурс.chgk.info</b> и устанавливаем его как
-веб-редирект на ваш действующий хостинг (сервер) <b>www.где-то.там</b>.
-И тогда если кто-то наберет в браузере адрес <b>ваш_ресурс.chgk.info</b>,
-то он будет автоматически переброшен на адрес <b>www.где-то.там</b>. Это
-удобно тем, что внешние пользователи могут использовать редирект,
-если они не помнят или не знают адреса вашего сайта.
+    <p>
+      РљР°Рє РїСЂР°РІРёР»Рѕ, РґР»СЏ Р»СЋР±С‹С… РїСЂРѕРµРєС‚РѕРІ Рё СЃР°Р№С‚РѕРІ, РёРјРµСЋС‰РёС… РѕС‚РЅРѕС€РµРЅРёРµ Рє Р§Р“Рљ, РјС‹
+      СЃРѕР·РґР°РµРј СЃСѓР±РґРѕРјРµРЅ <b>РІР°С€_СЂРµСЃСѓСЂСЃ.chgk.info</b> Рё СѓСЃС‚Р°РЅР°РІР»РёРІР°РµРј РµРіРѕ РєР°Рє
+      РІРµР±-СЂРµРґРёСЂРµРєС‚ РЅР° РІР°С€ РґРµР№СЃС‚РІСѓСЋС‰РёР№ С…РѕСЃС‚РёРЅРі (СЃРµСЂРІРµСЂ) <b>www.РіРґРµ-С‚Рѕ.С‚Р°Рј</b>. Р
+      С‚РѕРіРґР° РµСЃР»Рё РєС‚Рѕ-С‚Рѕ РЅР°Р±РµСЂРµС‚ РІ Р±СЂР°СѓР·РµСЂРµ Р°РґСЂРµСЃ <b>РІР°С€_СЂРµСЃСѓСЂСЃ.chgk.info</b>, С‚Рѕ
+      РѕРЅ Р±СѓРґРµС‚ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё РїРµСЂРµР±СЂРѕС€РµРЅ РЅР° Р°РґСЂРµСЃ <b>www.РіРґРµ-С‚Рѕ.С‚Р°Рј</b>. Р­С‚Рѕ
+      СѓРґРѕР±РЅРѕ С‚РµРј, С‡С‚Рѕ РІРЅРµС€РЅРёРµ РїРѕР»СЊР·РѕРІР°С‚РµР»Рё РјРѕРіСѓС‚ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ СЂРµРґРёСЂРµРєС‚, РµСЃР»Рё РѕРЅРё
+      РЅРµ РїРѕРјРЅСЏС‚ РёР»Рё РЅРµ Р·РЅР°СЋС‚ Р°РґСЂРµСЃР° РІР°С€РµРіРѕ СЃР°Р№С‚Р°. Р•СЃР»Рё Р¶Рµ Сѓ РІР°СЃ РЅРµС‚ С…РѕСЃС‚РёРЅРіР° (С‚Рѕ
+      РµСЃС‚СЊ РјРµСЃС‚Р° РґР»СЏ СЃР°Р№С‚Р° РЅР° РєР°РєРѕРј-С‚Рѕ СЃРµСЂРІРµСЂРµ), С‚Рѕ РІ РѕРїСЂРµРґРµР»РµРЅРЅС‹С… СЃР»СѓС‡Р°СЏС… РјС‹
+      РјРѕР¶РµРј РґР°С‚СЊ С…РѕСЃС‚РёРЅРі Сѓ РЅР°СЃ. РќРѕ РїРѕСЃРєРѕР»СЊРєСѓ СЃРµСЂРІРµСЂ chgk.info СЃС‚СЂРѕРіРѕ
+      РЅРµРєРѕРјРјРµСЂС‡РµСЃРєРёР№ Рё РїРѕРґРґРµСЂР¶РёРІР°РµС‚СЃСЏ РЅР° РґРѕР±СЂРѕРІРѕР»СЊРЅРѕР№ РѕСЃРЅРѕРІРµ, Сѓ РЅР°СЃ РµСЃС‚СЊ
+      РѕРїСЂРµРґРµР»РµРЅРЅС‹Рµ С‚СЂРµР±РѕРІР°РЅРёСЏ Рє СЃР°Р№С‚Р°Рј Рё Рє Р»СЋРґСЏРј, РєРѕС‚РѕСЂС‹Рµ РёС… РїРѕРґРґРµСЂР¶РёРІР°СЋС‚. Р’
+      С‡Р°СЃС‚РЅРѕСЃС‚Рё:
+    </p>
 
-Если же у вас нет хостинга (то есть места для сайта на каком-то
-сервере), то в определенных случаях мы можем дать хостинг у нас.
-Но поскольку сервер chgk.info строго некоммерческий и поддерживается
-на добровольной основе, у нас есть определенные требования к сайтам
-и к людям, которые их поддерживают. В частности:
-<ul><li>
-нужен ответственный за сайт, который знает и держит под контролем
-    все, что происходит на сайте, которого легко найти по телефону и
-    е-майлу. В случае любых проблем спрос будет с этого человека.
+    <ul>
+      <li>
+        РЅСѓР¶РµРЅ РѕС‚РІРµС‚СЃС‚РІРµРЅРЅС‹Р№ Р·Р° СЃР°Р№С‚, РєРѕС‚РѕСЂС‹Р№ Р·РЅР°РµС‚ Рё РґРµСЂР¶РёС‚ РїРѕРґ РєРѕРЅС‚СЂРѕР»РµРј РІСЃРµ,
+        С‡С‚Рѕ РїСЂРѕРёСЃС…РѕРґРёС‚ РЅР° СЃР°Р№С‚Рµ, РєРѕС‚РѕСЂРѕРіРѕ Р»РµРіРєРѕ РЅР°Р№С‚Рё РїРѕ С‚РµР»РµС„РѕРЅСѓ Рё Рµ-РјР°Р№Р»Сѓ. Р’
+        СЃР»СѓС‡Р°Рµ Р»СЋР±С‹С… РїСЂРѕР±Р»РµРј СЃРїСЂРѕСЃ Р±СѓРґРµС‚ СЃ СЌС‚РѕРіРѕ С‡РµР»РѕРІРµРєР°.
+      </li>
 
-<li> нужен ведущий-вебмастер, который бы в достаточной степени
-    разбирался в Юниксе (у нас стоит Debian Linux) и в программах,
-    которые используются на сайте. Этот человек должен быть способен
-    поддерживать сайт и ПО в работоспособном состоянии, устанавливать
-    патчи и обновления, и т.д. Разумеется, ответственным за сайт и
-    вебмастером может быть один и тот же человек.
+      <li>
+        РЅСѓР¶РµРЅ РІРµРґСѓС‰РёР№-РІРµР±РјР°СЃС‚РµСЂ, РєРѕС‚РѕСЂС‹Р№ Р±С‹ РІ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕР№ СЃС‚РµРїРµРЅРё СЂР°Р·Р±РёСЂР°Р»СЃСЏ РІ
+        Р®РЅРёРєСЃРµ (Сѓ РЅР°СЃ СЃС‚РѕРёС‚ Debian Linux) Рё РІ РїСЂРѕРіСЂР°РјРјР°С…, РєРѕС‚РѕСЂС‹Рµ РёСЃРїРѕР»СЊР·СѓСЋС‚СЃСЏ
+        РЅР° СЃР°Р№С‚Рµ. Р­С‚РѕС‚ С‡РµР»РѕРІРµРє РґРѕР»Р¶РµРЅ Р±С‹С‚СЊ СЃРїРѕСЃРѕР±РµРЅ РїРѕРґРґРµСЂР¶РёРІР°С‚СЊ СЃР°Р№С‚ Рё РџРћ РІ
+        СЂР°Р±РѕС‚РѕСЃРїРѕСЃРѕР±РЅРѕРј СЃРѕСЃС‚РѕСЏРЅРёРё, СѓСЃС‚Р°РЅР°РІР»РёРІР°С‚СЊ РїР°С‚С‡Рё Рё РѕР±РЅРѕРІР»РµРЅРёСЏ, Рё С‚.Рґ.
+        Р Р°Р·СѓРјРµРµС‚СЃСЏ, РѕС‚РІРµС‚СЃС‚РІРµРЅРЅС‹Рј Р·Р° СЃР°Р№С‚ Рё РІРµР±РјР°СЃС‚РµСЂРѕРј РјРѕР¶РµС‚ Р±С‹С‚СЊ РѕРґРёРЅ Рё С‚РѕС‚ Р¶Рµ
+        С‡РµР»РѕРІРµРє.
+      </li>
 
-<li> на сайте не должно быть никакой коммерции (включая баннеры),
-    никакого пиратского ПО, никаких материалов, нарушающих авторские
-    права, а также ничего что обычно бывает запрещено (расизм, насилие,
-    порнография, и пр.) То же самое относится и к содержимому личных
-    директорий тех, кто поддерживает сайт.
+      <li>
+        РЅР° СЃР°Р№С‚Рµ РЅРµ РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ РЅРёРєР°РєРѕР№ РєРѕРјРјРµСЂС†РёРё (РІРєР»СЋС‡Р°СЏ Р±Р°РЅРЅРµСЂС‹), РЅРёРєР°РєРѕРіРѕ
+        РїРёСЂР°С‚СЃРєРѕРіРѕ РџРћ, РЅРёРєР°РєРёС… РјР°С‚РµСЂРёР°Р»РѕРІ, РЅР°СЂСѓС€Р°СЋС‰РёС… Р°РІС‚РѕСЂСЃРєРёРµ РїСЂР°РІР°, Р° С‚Р°РєР¶Рµ
+        РЅРёС‡РµРіРѕ С‡С‚Рѕ РѕР±С‹С‡РЅРѕ Р±С‹РІР°РµС‚ Р·Р°РїСЂРµС‰РµРЅРѕ (СЂР°СЃРёР·Рј, РЅР°СЃРёР»РёРµ, РїРѕСЂРЅРѕРіСЂР°С„РёСЏ, Рё РїСЂ.)
+        РўРѕ Р¶Рµ СЃР°РјРѕРµ РѕС‚РЅРѕСЃРёС‚СЃСЏ Рё Рє СЃРѕРґРµСЂР¶РёРјРѕРјСѓ Р»РёС‡РЅС‹С… РґРёСЂРµРєС‚РѕСЂРёР№ С‚РµС…, РєС‚Рѕ
+        РїРѕРґРґРµСЂР¶РёРІР°РµС‚ СЃР°Р№С‚.
+      </li>
 
-<li> веб-траффик на сайте должен быть разумным, равно как и размер
-    самого сайта.
-</ul>
+      <li>
+        РІРµР±-С‚СЂР°С„С„РёРє РЅР° СЃР°Р№С‚Рµ РґРѕР»Р¶РµРЅ Р±С‹С‚СЊ СЂР°Р·СѓРјРЅС‹Рј, СЂР°РІРЅРѕ РєР°Рє Рё СЂР°Р·РјРµСЂ СЃР°РјРѕРіРѕ
+        СЃР°Р№С‚Р°.
+      </li>
+    </ul>
 
-<p>По поводу доменных имен. Все потенциальные или фактические конфликты
-по этому поводу должны быть улажены заранее. Попечительский совет не
-занимается их разрешением. Это означает, что мы не будем менять
-статус-кво до тех пор, пока владельцы запрашиваемого и существующего
-ресурсов не договорятся между собой сами.
+    <p>
+      РџРѕ РїРѕРІРѕРґСѓ РґРѕРјРµРЅРЅС‹С… РёРјРµРЅ. Р’СЃРµ РїРѕС‚РµРЅС†РёР°Р»СЊРЅС‹Рµ РёР»Рё С„Р°РєС‚РёС‡РµСЃРєРёРµ РєРѕРЅС„Р»РёРєС‚С‹ РїРѕ
+      СЌС‚РѕРјСѓ РїРѕРІРѕРґСѓ РґРѕР»Р¶РЅС‹ Р±С‹С‚СЊ СѓР»Р°Р¶РµРЅС‹ Р·Р°СЂР°РЅРµРµ. РџРѕРїРµС‡РёС‚РµР»СЊСЃРєРёР№ СЃРѕРІРµС‚ РЅРµ
+      Р·Р°РЅРёРјР°РµС‚СЃСЏ РёС… СЂР°Р·СЂРµС€РµРЅРёРµРј. Р­С‚Рѕ РѕР·РЅР°С‡Р°РµС‚, С‡С‚Рѕ РјС‹ РЅРµ Р±СѓРґРµРј РјРµРЅСЏС‚СЊ СЃС‚Р°С‚СѓСЃ-РєРІРѕ
+      РґРѕ С‚РµС… РїРѕСЂ, РїРѕРєР° РІР»Р°РґРµР»СЊС†С‹ Р·Р°РїСЂР°С€РёРІР°РµРјРѕРіРѕ Рё СЃСѓС‰РµСЃС‚РІСѓСЋС‰РµРіРѕ СЂРµСЃСѓСЂСЃРѕРІ РЅРµ
+      РґРѕРіРѕРІРѕСЂСЏС‚СЃСЏ РјРµР¶РґСѓ СЃРѕР±РѕР№ СЃР°РјРё.
+    </p>
 
-<p>Из последнего правила есть одно исключение: если на одно и то же
-доменное имя типа <b>город.chgk.info</b> есть только один претендент -
-например, в городе только один клуб имеет свой сайт, - то мы даем городской 
-домен этому претенденту. Но если появляются еще претенденты на то же самое
-имя (скажем, в городе появился второй клубный сайт), то мы переадресовываем
-городской домен на регистр клубов (ссылка), а клубам предлагаем
-выбрать другие имена.
+    <p>
+      РР· РїРѕСЃР»РµРґРЅРµРіРѕ РїСЂР°РІРёР»Р° РµСЃС‚СЊ РѕРґРЅРѕ РёСЃРєР»СЋС‡РµРЅРёРµ: РµСЃР»Рё РЅР° РѕРґРЅРѕ Рё С‚Рѕ Р¶Рµ РґРѕРјРµРЅРЅРѕРµ
+      РёРјСЏ С‚РёРїР° <b>РіРѕСЂРѕРґ.chgk.info</b> РµСЃС‚СЊ С‚РѕР»СЊРєРѕ РѕРґРёРЅ РїСЂРµС‚РµРЅРґРµРЅС‚ - РЅР°РїСЂРёРјРµСЂ, РІ
+      РіРѕСЂРѕРґРµ С‚РѕР»СЊРєРѕ РѕРґРёРЅ РєР»СѓР± РёРјРµРµС‚ СЃРІРѕР№ СЃР°Р№С‚, - С‚Рѕ РјС‹ РґР°РµРј РіРѕСЂРѕРґСЃРєРѕР№ РґРѕРјРµРЅ
+      СЌС‚РѕРјСѓ РїСЂРµС‚РµРЅРґРµРЅС‚Сѓ. РќРѕ РµСЃР»Рё РїРѕСЏРІР»СЏСЋС‚СЃСЏ РµС‰Рµ РїСЂРµС‚РµРЅРґРµРЅС‚С‹ РЅР° С‚Рѕ Р¶Рµ СЃР°РјРѕРµ РёРјСЏ
+      (СЃРєР°Р¶РµРј, РІ РіРѕСЂРѕРґРµ РїРѕСЏРІРёР»СЃСЏ РІС‚РѕСЂРѕР№ РєР»СѓР±РЅС‹Р№ СЃР°Р№С‚), С‚Рѕ РјС‹ РїРµСЂРµР°РґСЂРµСЃРѕРІС‹РІР°РµРј
+      РіРѕСЂРѕРґСЃРєРѕР№ РґРѕРјРµРЅ РЅР° СЂРµРіРёСЃС‚СЂ РєР»СѓР±РѕРІ (СЃСЃС‹Р»РєР°), Р° РєР»СѓР±Р°Рј РїСЂРµРґР»Р°РіР°РµРј РІС‹Р±СЂР°С‚СЊ
+      РґСЂСѓРіРёРµ РёРјРµРЅР°.
+    </p>
 
-<p>Перечисленные требования и правила не являются исчерпывающими.
-Кроме того, они могут быть дополнены или изменены
-в любой момент. Их практически невозможно формализовать
-полностью, поэтому невозможно избежать ситуаций, в которых
-попечительскому совету приходится эти ситуации оценивать и принимать
-новые решения. Так что некоторый субъективизм в оценках и решениях
-попечительского совета всегда будет присутствовать. В частности,
-любые сомнения в том, что потенциальный владелец ресурса полностью
-их соблюдает, будут трактоваться в сторону отрицательного решения.
-В то же время, мы всегда готовы к конструктивному сотрудничеству и
-стараемся помогать любому проекту и словом, и делом.
-
-</body>
+    <p>
+      РџРµСЂРµС‡РёСЃР»РµРЅРЅС‹Рµ С‚СЂРµР±РѕРІР°РЅРёСЏ Рё РїСЂР°РІРёР»Р° РЅРµ СЏРІР»СЏСЋС‚СЃСЏ РёСЃС‡РµСЂРїС‹РІР°СЋС‰РёРјРё. РљСЂРѕРјРµ С‚РѕРіРѕ,
+      РѕРЅРё РјРѕРіСѓС‚ Р±С‹С‚СЊ РґРѕРїРѕР»РЅРµРЅС‹ РёР»Рё РёР·РјРµРЅРµРЅС‹ РІ Р»СЋР±РѕР№ РјРѕРјРµРЅС‚. РС… РїСЂР°РєС‚РёС‡РµСЃРєРё
+      РЅРµРІРѕР·РјРѕР¶РЅРѕ С„РѕСЂРјР°Р»РёР·РѕРІР°С‚СЊ РїРѕР»РЅРѕСЃС‚СЊСЋ, РїРѕСЌС‚РѕРјСѓ РЅРµРІРѕР·РјРѕР¶РЅРѕ РёР·Р±РµР¶Р°С‚СЊ СЃРёС‚СѓР°С†РёР№,
+      РІ РєРѕС‚РѕСЂС‹С… РїРѕРїРµС‡РёС‚РµР»СЊСЃРєРѕРјСѓ СЃРѕРІРµС‚Сѓ РїСЂРёС…РѕРґРёС‚СЃСЏ СЌС‚Рё СЃРёС‚СѓР°С†РёРё РѕС†РµРЅРёРІР°С‚СЊ Рё
+      РїСЂРёРЅРёРјР°С‚СЊ РЅРѕРІС‹Рµ СЂРµС€РµРЅРёСЏ. РўР°Рє С‡С‚Рѕ РЅРµРєРѕС‚РѕСЂС‹Р№ СЃСѓР±СЉРµРєС‚РёРІРёР·Рј РІ РѕС†РµРЅРєР°С… Рё
+      СЂРµС€РµРЅРёСЏС… РїРѕРїРµС‡РёС‚РµР»СЊСЃРєРѕРіРѕ СЃРѕРІРµС‚Р° РІСЃРµРіРґР° Р±СѓРґРµС‚ РїСЂРёСЃСѓС‚СЃС‚РІРѕРІР°С‚СЊ. Р’ С‡Р°СЃС‚РЅРѕСЃС‚Рё,
+      Р»СЋР±С‹Рµ СЃРѕРјРЅРµРЅРёСЏ РІ С‚РѕРј, С‡С‚Рѕ РїРѕС‚РµРЅС†РёР°Р»СЊРЅС‹Р№ РІР»Р°РґРµР»РµС† СЂРµСЃСѓСЂСЃР° РїРѕР»РЅРѕСЃС‚СЊСЋ РёС…
+      СЃРѕР±Р»СЋРґР°РµС‚, Р±СѓРґСѓС‚ С‚СЂР°РєС‚РѕРІР°С‚СЊСЃСЏ РІ СЃС‚РѕСЂРѕРЅСѓ РѕС‚СЂРёС†Р°С‚РµР»СЊРЅРѕРіРѕ СЂРµС€РµРЅРёСЏ. Р’ С‚Рѕ Р¶Рµ
+      РІСЂРµРјСЏ, РјС‹ РІСЃРµРіРґР° РіРѕС‚РѕРІС‹ Рє РєРѕРЅСЃС‚СЂСѓРєС‚РёРІРЅРѕРјСѓ СЃРѕС‚СЂСѓРґРЅРёС‡РµСЃС‚РІСѓ Рё СЃС‚Р°СЂР°РµРјСЃСЏ
+      РїРѕРјРѕРіР°С‚СЊ Р»СЋР±РѕРјСѓ РїСЂРѕРµРєС‚Сѓ Рё СЃР»РѕРІРѕРј, Рё РґРµР»РѕРј.
+    </p>
+  </body>
 </html>
