--- a/ui/static/arch/old_index.html
+++ b/ui/static/arch/old_index.html
@@ -1,29 +1,35 @@
-<HTML>
-<HEAD>
-<meta name='yandex-verification' content='40fba58df26e43be' />
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=koi8-r">
-</HEAD>
-<BODY bgColor=white><A name=#begin></A>
+<html>
+  <head>
+    <meta name="yandex-verification" content="40fba58df26e43be" />
+    <meta http-equiv="Content-Type" content="text/html; charset=koi8-r" />
+  </head>
+  <body bgcolor="white">
+    <a name="#begin"></a>
 
-<h1>ЧГК.Инфо</h1>
+    <h1>п╖п⌠п .п≤п╫я└п╬ (я│я┌п╟я─я▀п╧ п╦п╫п╢п╣п╨я│)</h1>
 
-<h2>Каталог полезных ресурсов (2018) для спортивных турниров и тренировок</h2>
+    <h2>
+      п∙я┴я▒ п╠п╬п╩п╣п╣ я│я┌п╟я─п╟я▐ п╡п╣я─я│п╦я▐ <a href="index-map.html">пЁп╩п╟п╡п╫п╬п╧ я│я┌я─п╟п╫п╦я├я▀</a>
+    </h2>
 
-<pre>
-1.
-2.
-3.
-</pre>
+    <h2>п°п╟я┌п╣я─п╦п╟п╩я▀ п╦пЁя─я▀ "п╥п╫п╟я┌п╬п╨п╬п╡" я│ пЁя─п╬я│я│п╪п╣п╧я│я┌п╣я─п╟п╪п╦ (2009)</h2>
 
-<h2>Старая версия <a href="index-map.html">главной страницы</a></h2>
-
-<h2>Материалы игры "знатоков" с гроссмейстерами (2009)</h2>
-
-<ul>
-  <li><a href="http://www.kknop.com/irc/">Инструкция для участников, логи игры</a></li>
-  <li><a href="http://www.chgk.info/2009-12-27_ChGK_press_release.rtf">Пресс-релиз от 27.12.2009</a></li>
-  <li><a href="http://www.chgk.info/2009-12-28_ChGK_press_release.rtf">Пресс-релиз от 28.12.2009</a></li>
-</ul>
-
-</BODY></HTML>
-
+    <ul>
+      <li>
+        <a href="http://www.kknop.com/irc/"
+          >п≤п╫я│я┌я─я┐п╨я├п╦я▐ п╢п╩я▐ я┐я┤п╟я│я┌п╫п╦п╨п╬п╡, п╩п╬пЁп╦ п╦пЁя─я▀</a
+        >
+      </li>
+      <li>
+        <a href="http://www.chgk.info/2009-12-27_ChGK_press_release.rtf"
+          >п÷я─п╣я│я│-я─п╣п╩п╦п╥ п╬я┌ 27.12.2009</a
+        >
+      </li>
+      <li>
+        <a href="http://www.chgk.info/2009-12-28_ChGK_press_release.rtf"
+          >п÷я─п╣я│я│-я─п╣п╩п╦п╥ п╬я┌ 28.12.2009</a
+        >
+      </li>
+    </ul>
+  </body>
+</html>
