--- a/ui/static/arch/sync.html
+++ b/ui/static/arch/sync.html
@@ -1,113 +1,225 @@
-<HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf8">
-</HEAD>
-<BODY bgColor=white><A name=#begin></A>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
+  </head>
+  <body bgcolor="white">
+    <a name="#begin"></a>
 
-<table border=0><tr><td width="30%">
-<div id="alert">
-    <div id="yw0"></div></div>
-<div>
-	<form class="well form-horizontal" id="auth-index-form" action="/login/admin/login" method="post"><div class="head">
-	<h1>Синхронизатор</h1>
-</div>
-<div class="control-group "><label class="control-label required" for="Login_login">Логин <span class="required">*</span></label><div class="controls"><input name="Login[login]" id="Login_login" type="text" /><span class="help-inline error" id="Login_login_em_" style="display: none"></span></div></div><div class="control-group "><label class="control-label required" for="Login_password">Пароль <span class="required">*</span></label><div class="controls"><input name="Login[password]" id="Login_password" type="password" /><span class="help-inline error" id="Login_password_em_" style="display: none"></span></div></div><div class="control-group "><div class="controls"><label class="checkbox" for="Login_rememberMe"><input id="ytLogin_rememberMe" type="hidden" value="0" name="Login[rememberMe]" /><input name="Login[rememberMe]" id="Login_rememberMe" value="1" type="checkbox" />
-Запомнить меня<span class="help-inline error" id="Login_rememberMe_em_" style="display: none"></span></label></div></div><div class="control-group">
-    <div class="controls">
-<a id="recovery" href="/login/admin/forgot-password">Восстановить пароль</a>    </div>
-</div>
+    <table border="0">
+      <tr>
+        <td width="30%">
+          <div id="alert">
+            <div id="yw0"></div>
+          </div>
+          <div>
+            <form
+              class="well form-horizontal"
+              id="auth-index-form"
+              action="/login/admin/login"
+              method="post"
+            >
+              <div class="head">
+                <h1>Синхронизатор</h1>
+              </div>
+              <div class="control-group">
+                <label class="control-label required" for="Login_login"
+                  >Логин <span class="required">*</span></label
+                >
+                <div class="controls">
+                  <input
+                    name="Login[login]"
+                    id="Login_login"
+                    type="text"
+                  /><span
+                    class="help-inline error"
+                    id="Login_login_em_"
+                    style="display: none"
+                  ></span>
+                </div>
+              </div>
+              <div class="control-group">
+                <label class="control-label required" for="Login_password"
+                  >Пароль <span class="required">*</span></label
+                >
+                <div class="controls">
+                  <input
+                    name="Login[password]"
+                    id="Login_password"
+                    type="password"
+                  /><span
+                    class="help-inline error"
+                    id="Login_password_em_"
+                    style="display: none"
+                  ></span>
+                </div>
+              </div>
+              <div class="control-group">
+                <div class="controls">
+                  <label class="checkbox" for="Login_rememberMe"
+                    ><input
+                      id="ytLogin_rememberMe"
+                      type="hidden"
+                      value="0"
+                      name="Login[rememberMe]" /><input
+                      name="Login[rememberMe]"
+                      id="Login_rememberMe"
+                      value="1"
+                      type="checkbox" />
+                    Запомнить меня<span
+                      class="help-inline error"
+                      id="Login_rememberMe_em_"
+                      style="display: none"
+                    ></span
+                  ></label>
+                </div>
+              </div>
+              <div class="control-group">
+                <div class="controls">
+                  <a id="recovery" href="/login/admin/forgot-password"
+                    >Восстановить пароль</a
+                  >
+                </div>
+              </div>
 
+              <div class="form-actions">
+                <button class="btn btn-primary" type="submit" name="yt0">
+                  <i class="icon-ok icon-white"></i> Вход
+                </button>
+              </div>
+            </form>
+          </div>
+        </td>
+        <td width="70%">
+          <p align="justify">
+            Вы находитесь на сайте <a href="http://www.chgk.info/">ЧГК.Инфо</a>,
+            предназначенном для ценителей, любителей и
+            <i>знатоков</i> интеллектуальных игр типа &quot;Что? Где?
+            Когда?&quot; (ЧГК).
+            <a href="http://www.chgk.info/sync.html#trustees">Мы</a> желаем Вам
+            приятного путешествия по игровым ресурсам. Эта страничка создана для
+            облегчения навигации по сайтам крупнейших синхронных турниров.
+          </p>
+          <hr />
+          <table cellspacing="1" cellpadding="1" width="100%">
+            <tbody>
+              <tr align="left">
+                <th width="60%">Турнир</th>
+                <th width="40%">Адрес сайта</th>
+              </tr>
 
-<div class="form-actions">
-	<button class="btn btn-primary" type="submit" name="yt0"><i class="icon-ok icon-white"></i> Вход</button></div>
-</form>
-</div>
+              <tr>
+                <td><i>Кубок Городов (КГ) (c 1999)</i></td>
+                <td>
+                  <a href="http://kubgor.chgk.info">http://kubgor.chgk.info</a>
+                </td>
+              </tr>
 
-</td><td width="70%">
-<P align="justify">Вы находитесь на сайте 
-<A href="http://www.chgk.info/">ЧГК.Инфо</A>, предназначенном для ценителей,
-любителей и <i>знатоков</i> интеллектуальных игр типа &quot;Что? Где? Когда?&quot;
-(ЧГК).  <A href="http://www.chgk.info/sync.html#trustees">Мы</A> желаем Вам
-приятного путешествия по игровым ресурсам. Эта страничка создана для 
-облегчения навигации по сайтам крупнейших синхронных турниров.</p>
-<HR>
-<TABLE cellSpacing=1 cellPadding=1 width="100%">
-  <TBODY>
-  <TR align="left">
-    <TH width="60%">Турнир</TH>
-    <TH width="40%">Адрес сайта</TH>
-  </TR>
+              <tr>
+                <td><i>Открытый Кубок России (ОКР) (c 1999)</i></td>
+                <td><a href="http://okr.chgk.info">http://okr.chgk.info</a></td>
+              </tr>
 
-  <TR>
-    <TD><I>Кубок Городов (КГ) (c 1999)</I></TD>
-    <TD><A href="http://kubgor.chgk.info">http://kubgor.chgk.info</A></TD>
-  </TR>
+              <tr>
+                <td><i>Кубок Провинций (КуПр) (c 2002)</i></td>
+                <td>
+                  <a href="http://province.chgk.info"
+                    >http://province.chgk.info</a
+                  >
+                </td>
+              </tr>
 
-  <TR>
-    <TD><I>Открытый Кубок России (ОКР) (c 1999)</I></TD>
-    <TD><A href="http://okr.chgk.info">http://okr.chgk.info</A></TD>
-  </TR>
+              <tr>
+                <td><i>Кубок Чемпионов (КЧ) (c 2012)</i></td>
+                <td>
+                  <a href="http://kubchamp.chgk.info"
+                    >http://kubchamp.chgk.info</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <i
+                    >Открытый Всероссийский синхронный чемпионат (ОВСЧ) (с
+                    2003)</i
+                  >
+                </td>
+                <td>
+                  <a href="http://ovsch.chgk.info">http://ovsch.chgk.info</a>
+                </td>
+              </tr>
 
-  <TR>
-    <TD><I>Кубок Провинций (КуПр) (c 2002)</I></TD>
-    <TD><A href="http://province.chgk.info">http://province.chgk.info</A></TD>
-  </TR>
+              <tr>
+                <td><i>Молодежный Кубок Мира (МКМ) (с 2000)</i></td>
+                <td>
+                  <a href="http://student.chgk.info"
+                    >http://student.chgk.info</a
+                  >
+                </td>
+              </tr>
 
-  <TR>
-    <TD><I>Кубок Чемпионов (КЧ) (c 2012)</I></TD>
-    <TD><A href="http://kubchamp.chgk.info">http://kubchamp.chgk.info</A></TD>
-  </TR>
-  <TR>
-    <TD><I>Открытый Всероссийский синхронный чемпионат (ОВСЧ) (с 2003)</I></TD>
-    <TD><A href="http://ovsch.chgk.info">http://ovsch.chgk.info</A></TD>
-  </TR>
+              <tr>
+                <td>
+                  <i>Турниры Всемирного Движения Интеллекта (ВДИ) (с 2003)</i>
+                </td>
+                <td><a href="http://vdi.chgk.info">http://vdi.chgk.info</a></td>
+              </tr>
 
-  <TR>
-    <TD><I>Молодежный Кубок Мира (МКМ) (с 2000)</I></TD>
-    <TD><A href="http://student.chgk.info">http://student.chgk.info</A></TD>
-  </TR>
+              <tr>
+                <td>
+                  <i
+                    >Американский Интеллектуальный Синхронный Турнир (АИСТ)
+                    (2005)</i
+                  >
+                </td>
+                <td>
+                  <a href="http://aist.chgk.info">http://aist.chgk.info</a>
+                </td>
+              </tr>
 
-  <TR>
-    <TD><I>Турниры Всемирного Движения Интеллекта (ВДИ) (с 2003)</I></TD>
-    <TD><A href="http://vdi.chgk.info">http://vdi.chgk.info</A></TD>
-  </TR>
+              <tr>
+                <td><i>Международный кубок Хайфы (с 2005)</i></td>
+                <td>
+                  <a href="http://haifa-cup.chgk.info"
+                    >http://haifa-cup.chgk.info</a
+                  >
+                </td>
+              </tr>
 
-  <TR>
-    <TD><I>Американский Интеллектуальный Синхронный Турнир (АИСТ) (2005)</I></TD>
-    <TD><A href="http://aist.chgk.info">http://aist.chgk.info</A></TD>
-  </TR>
+              <tr>
+                <td><i>Международный кубок Тель-Авива (с 2005)</i></td>
+                <td>
+                  <a href="http://tacup.chgk.info">http://tacup.chgk.info</a>
+                </td>
+              </tr>
 
-  <TR>
-    <TD><I>Международный кубок Хайфы (с 2005)</I></TD>
-    <TD><A href="http://haifa-cup.chgk.info">http://haifa-cup.chgk.info</A></TD>
-  </TR>
+              <tr>
+                <td><i>Международный кубок Иерусалима (2006, 2008)</i></td>
+                <td>
+                  <a href="http://il.chgk.info/tur/jercup/jcup.htm"
+                    >http://il.chgk.info/tur/jercup/jcup.htm</a
+                  >
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+    </table>
+    <hr />
+    <p>Последние изменения на этой страничке сделаны 20.11.2012.</p>
 
-  <TR>
-    <TD><I>Международный кубок Тель-Авива (с 2005)</I></TD>
-    <TD><A href="http://tacup.chgk.info">http://tacup.chgk.info</A></TD>
-  </TR>
+    <a name="#trustees"></a>
+    <p align="justify">
+      Сайт <a href="http://www.chgk.info/">ЧГК.Инфо</a> создан и поддерживается
+      благодаря усилиям Совета попечителей &ndash; Бориса Вейцмана, Льва
+      Горенштейна, Алекса Покраса, Ирины Закс, Владимира Серова и Константина
+      Кнопа. Вы можете написать нам письмо по адресу
+      <a href="mailto:trustees@chgk.info">trustees@chgk.info</a>.
+    </p>
 
-  <TR>
-    <TD><I>Международный кубок Иерусалима (2006, 2008)</I></TD>
-    <TD><A href="http://il.chgk.info/tur/jercup/jcup.htm">http://il.chgk.info/tur/jercup/jcup.htm</A></TD>
-  </TR>
-
-  </TBODY>
-</TABLE>
-
-</td></tr></table>
-<HR>
-<P>Последние изменения на этой страничке сделаны 20.11.2012.</P> 
-
-<A name=#trustees></A>
-<P align="justify">Сайт <A href="http://www.chgk.info/">ЧГК.Инфо</A> создан и 
-поддерживается благодаря усилиям Совета попечителей &ndash; Бориса Вейцмана, 
-Льва Горенштейна, Алекса Покраса, Ирины Закс, Владимира Серова и 
-Константина Кнопа. Вы можете написать нам письмо по адресу 
-<A href="mailto:trustees@chgk.info">trustees@chgk.info</A>.</p> 
-
-<p align="justify">Полная карта сайта находится на 
-    <A href="http://links.chgk.info/">links.chgk.info</A>.
-</p>
-
-</BODY></HTML>
+    <p align="justify">
+      Полная карта сайта находится на
+      <a href="http://links.chgk.info/">links.chgk.info</a>.
+    </p>
+  </body>
+</html>
