--- a/ui/static/arch/whoiswho.htm
+++ b/ui/static/arch/whoiswho.htm
@@ -1,31 +1,32 @@
-<html><head><meta http-equiv=Content-Type content="text/html; charset=koi8-r">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html><head><meta http-equiv=Content-Type content="text/html; charset=utf-8">
 </head>
 <body>
 
-<h3>Кто вы, госпожа Заковряшина?</h3>
+<h3>п я┌п╬ п╡я▀, пЁп╬я│п©п╬п╤п╟ п≈п╟п╨п╬п╡я─я▐я┬п╦п╫п╟?</h3>
 
-<p> В самом конце ноября преподавательница одной из московских школ Светлана Викторовна Заковряшина, ранее никогда
-никакого отношения к "Что?Где?Когда?" не имевшая, неожиданно <a href="http://rating.chgk.info/player/188990">зарегистрировалась на сайте рейтинга ЧГК</a> 
-и стала регулярно получать вопросы синхронных турниров якобы с целью их проведения.</p>
+<p> п▓ я│п╟п╪п╬п╪ п╨п╬п╫я├п╣ п╫п╬я▐п╠я─я▐ п©я─п╣п©п╬п╢п╟п╡п╟я┌п╣п╩я▄п╫п╦я├п╟ п╬п╢п╫п╬п╧ п╦п╥ п╪п╬я│п╨п╬п╡я│п╨п╦я┘ я┬п╨п╬п╩ п║п╡п╣я┌п╩п╟п╫п╟ п▓п╦п╨я┌п╬я─п╬п╡п╫п╟ п≈п╟п╨п╬п╡я─я▐я┬п╦п╫п╟, я─п╟п╫п╣п╣ п╫п╦п╨п╬пЁп╢п╟
+п╫п╦п╨п╟п╨п╬пЁп╬ п╬я┌п╫п╬я┬п╣п╫п╦я▐ п╨ "п╖я┌п╬?п⌠п╢п╣?п п╬пЁп╢п╟?" п╫п╣ п╦п╪п╣п╡я┬п╟я▐, п╫п╣п╬п╤п╦п╢п╟п╫п╫п╬ <a href="http://rating.chgk.info/player/188990">п╥п╟я─п╣пЁп╦я│я┌я─п╦я─п╬п╡п╟п╩п╟я│я▄ п╫п╟ я│п╟п╧я┌п╣ я─п╣п╧я┌п╦п╫пЁп╟ п╖п⌠п </a>
+п╦ я│я┌п╟п╩п╟ я─п╣пЁя┐п╩я▐я─п╫п╬ п©п╬п╩я┐я┤п╟я┌я▄ п╡п╬п©я─п╬я│я▀ я│п╦п╫я┘я─п╬п╫п╫я▀я┘ я┌я┐я─п╫п╦я─п╬п╡ я▐п╨п╬п╠я▀ я│ я├п╣п╩я▄я▌ п╦я┘ п©я─п╬п╡п╣п╢п╣п╫п╦я▐.</p>
 
-<p>За два прошедших месяца Светлана Викторовна:<ul>
-<li>провела <a href="http://rating.chgk.info/player/188990/statistics/">11 турниров</a>
-<li>только с телефона более 60 раз входила (логинилась) на сайт рейтинга
-<li>только на телефон не менее 9 раз скачивала вопросы
-<li>только с телефона не менее 18 раз смотрела страничку <a href="http://rating.chgk.info/synch_town/46>Синхроны в городе: Брянск</a>
-<li>только с телефона 10 раз смотрела страничку брянской команды <a href="http://rating.chgk.info/team/57074">'3 градуса по Галифрею'</a>
-<li>только с телефона минимум дважды смотрела профиль игрока этой команды <a href="http://rating.chgk.info/player/141435">Елизаветы Спасенниковой</a>
+<p>п≈п╟ п╢п╡п╟ п©я─п╬я┬п╣п╢я┬п╦я┘ п╪п╣я│я▐я├п╟ п║п╡п╣я┌п╩п╟п╫п╟ п▓п╦п╨я┌п╬я─п╬п╡п╫п╟:<ul>
+<li>п©я─п╬п╡п╣п╩п╟ <a href="http://rating.chgk.info/player/188990/statistics/">11 я┌я┐я─п╫п╦я─п╬п╡</a>
+<li>я┌п╬п╩я▄п╨п╬ я│ я┌п╣п╩п╣я└п╬п╫п╟ п╠п╬п╩п╣п╣ 60 я─п╟п╥ п╡я┘п╬п╢п╦п╩п╟ (п╩п╬пЁп╦п╫п╦п╩п╟я│я▄) п╫п╟ я│п╟п╧я┌ я─п╣п╧я┌п╦п╫пЁп╟
+<li>я┌п╬п╩я▄п╨п╬ п╫п╟ я┌п╣п╩п╣я└п╬п╫ п╫п╣ п╪п╣п╫п╣п╣ 9 я─п╟п╥ я│п╨п╟я┤п╦п╡п╟п╩п╟ п╡п╬п©я─п╬я│я▀
+<li>я┌п╬п╩я▄п╨п╬ я│ я┌п╣п╩п╣я└п╬п╫п╟ п╫п╣ п╪п╣п╫п╣п╣ 18 я─п╟п╥ я│п╪п╬я┌я─п╣п╩п╟ я│я┌я─п╟п╫п╦я┤п╨я┐ <a href="http://rating.chgk.info/synch_town/46>п║п╦п╫я┘я─п╬п╫я▀ п╡ пЁп╬я─п╬п╢п╣: п▒я─я▐п╫я│п╨</a>
+<li>я┌п╬п╩я▄п╨п╬ я│ я┌п╣п╩п╣я└п╬п╫п╟ 10 я─п╟п╥ я│п╪п╬я┌я─п╣п╩п╟ я│я┌я─п╟п╫п╦я┤п╨я┐ п╠я─я▐п╫я│п╨п╬п╧ п╨п╬п╪п╟п╫п╢я▀ <a href="http://rating.chgk.info/team/57074">'3 пЁя─п╟п╢я┐я│п╟ п©п╬ п⌠п╟п╩п╦я└я─п╣я▌'</a>
+<li>я┌п╬п╩я▄п╨п╬ я│ я┌п╣п╩п╣я└п╬п╫п╟ п╪п╦п╫п╦п╪я┐п╪ п╢п╡п╟п╤п╢я▀ я│п╪п╬я┌я─п╣п╩п╟ п©я─п╬я└п╦п╩я▄ п╦пЁя─п╬п╨п╟ я█я┌п╬п╧ п╨п╬п╪п╟п╫п╢я▀ <a href="http://rating.chgk.info/player/141435">п∙п╩п╦п╥п╟п╡п╣я┌я▀ п║п©п╟я│п╣п╫п╫п╦п╨п╬п╡п╬п╧</a>
 </ul>
 
-<p>Нужно ли добавлять, что среди игроков команд, якобы игравших десяток турниров у этой московской учительницы, нет ни одного из ее настоящих
-учеников, а все перечисленные в отчётах и результатах игроки не имеют страничек в социальных сетях? Безусловно, люди имеют право не имееть страничек, -
-но чтоб сразу полтора десятка школьников, без единого исключения?
+<p>п²я┐п╤п╫п╬ п╩п╦ п╢п╬п╠п╟п╡п╩я▐я┌я▄, я┤я┌п╬ я│я─п╣п╢п╦ п╦пЁя─п╬п╨п╬п╡ п╨п╬п╪п╟п╫п╢, я▐п╨п╬п╠я▀ п╦пЁя─п╟п╡я┬п╦я┘ п╢п╣я│я▐я┌п╬п╨ я┌я┐я─п╫п╦я─п╬п╡ я┐ я█я┌п╬п╧ п╪п╬я│п╨п╬п╡я│п╨п╬п╧ я┐я┤п╦я┌п╣п╩я▄п╫п╦я├я▀, п╫п╣я┌ п╫п╦ п╬п╢п╫п╬пЁп╬ п╦п╥ п╣п╣ п╫п╟я│я┌п╬я▐я┴п╦я┘
+я┐я┤п╣п╫п╦п╨п╬п╡, п╟ п╡я│п╣ п©п╣я─п╣я┤п╦я│п╩п╣п╫п╫я▀п╣ п╡ п╬я┌я┤я▒я┌п╟я┘ п╦ я─п╣п╥я┐п╩я▄я┌п╟я┌п╟я┘ п╦пЁя─п╬п╨п╦ п╫п╣ п╦п╪п╣я▌я┌ я│я┌я─п╟п╫п╦я┤п╣п╨ п╡ я│п╬я├п╦п╟п╩я▄п╫я▀я┘ я│п╣я┌я▐я┘? п▒п╣п╥я┐я│п╩п╬п╡п╫п╬, п╩я▌п╢п╦ п╦п╪п╣я▌я┌ п©я─п╟п╡п╬ п╫п╣ п╦п╪п╣п╣я┌я▄ я│я┌я─п╟п╫п╦я┤п╣п╨, -
+п╫п╬ я┤я┌п╬п╠ я│я─п╟п╥я┐ п©п╬п╩я┌п╬я─п╟ п╢п╣я│я▐я┌п╨п╟ я┬п╨п╬п╩я▄п╫п╦п╨п╬п╡, п╠п╣п╥ п╣п╢п╦п╫п╬пЁп╬ п╦я│п╨п╩я▌я┤п╣п╫п╦я▐?
 
-<p>Или все-таки Елизавета Валерьевна Спасенникова сможет объяснить эти неувязочки? Я бы предпочёл, чтобы она их объяснила.
+<p>п≤п╩п╦ п╡я│п╣-я┌п╟п╨п╦ п∙п╩п╦п╥п╟п╡п╣я┌п╟ п▓п╟п╩п╣я─я▄п╣п╡п╫п╟ п║п©п╟я│п╣п╫п╫п╦п╨п╬п╡п╟ я│п╪п╬п╤п╣я┌ п╬п╠я┼я▐я│п╫п╦я┌я▄ я█я┌п╦ п╫п╣я┐п╡я▐п╥п╬я┤п╨п╦? п╞ п╠я▀ п©я─п╣п╢п©п╬я┤я▒п╩, я┤я┌п╬п╠я▀ п╬п╫п╟ п╦я┘ п╬п╠я┼я▐я│п╫п╦п╩п╟.
 
-<p>С уважением,
-<br>председатель комиссии МАК по рейтингу
-<br>Константин Кноп.
-<br>Со мной можно связаться по e-mail kostyaknop@gmail.com или через соцсети.
+<p>п║ я┐п╡п╟п╤п╣п╫п╦п╣п╪,
+<br>п©я─п╣п╢я│п╣п╢п╟я┌п╣п╩я▄ п╨п╬п╪п╦я│я│п╦п╦ п°п░п  п©п╬ я─п╣п╧я┌п╦п╫пЁя┐
+<br>п п╬п╫я│я┌п╟п╫я┌п╦п╫ п п╫п╬п©.
+<br>п║п╬ п╪п╫п╬п╧ п╪п╬п╤п╫п╬ я│п╡я▐п╥п╟я┌я▄я│я▐ п©п╬ e-mail kostyaknop@gmail.com п╦п╩п╦ я┤п╣я─п╣п╥ я│п╬я├я│п╣я┌п╦.
 
 </body></html>
